# mini_tree

./: .config.bak  .config.old  .gitignore  API_COMPATIBILITY.md  ARCHITECTURE.html  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FILE_INDEX.md  Kconfig  LICENSE  Makefile  NOTICE.md  README.md  ROADMAP.md  TODOLIST.md  USAGE.md  config.example.h  default.config  error_symbols.ld
.trae/documents/: 移植架构部分到中间件.md
algorithm/: CMakeLists.txt
algorithm/buffer/: circle_fifo_buffer.c  m_buffer.h
board/: CMakeLists.txt  board.dts
board/docs/: Code_Wiki.md  devicetree.md  linux-vs-mini_tree-device-model.md
board/dt-bindings/: gpio.h
board/dt-bindings/dma/: dma-parameter.h
board/dt-bindings/gpio/: gpio-ctl.h
board/dt-bindings/hw/: hw-instance.h
board/dt-bindings/spi/: spi-parameter.h
board/dt-bindings/uart/: uart-parameter.h
board/dts/: .gitkeep
board/dtsi/: .gitkeep
board/include/: VFS.h  board_config.h  board_dma.h  bus.h  config_store.h  dev_lifecycle.h  device.h  driver.h  freertos_compat.h  task_config.h  task_utils.h  vfs_adc.h  vfs_gpio.h  vfs_storage.h
board/include/sys/: times.h
board/soc/: template.dtsi
board/src/: board_device.c  board_dma.c  board_driver.c  bus.c  config_store.c  dev_lifecycle.c  task_config.c  task_utils.c
bus/: CMakeLists.txt
bus/dma/: dma.h  dma_core.c  dma_internal.h
bus/include/types/: bus_types.h
bus/spi/: SPI.md  spi_bus.c  spi_bus.h
bus/uart/: uart_bus.c  uart_bus.h
cmake/: disasm.cmake  etl.cmake  toolchain_arm_cm3.cmake  toolchain_arm_cm4f.cmake  toolchain_arm_cm7.cmake  toolchain_clang_arm_cm3.cmake  toolchain_clang_arm_cm4f.cmake  toolchain_clang_arm_cm7.cmake  toolchain_clang_riscv.cmake  toolchain_keil5_arm_cm3.cmake  toolchain_keil5_arm_cm4f.cmake  toolchain_keil5_arm_cm7.cmake  toolchain_keil6_arm_cm3.cmake  toolchain_keil6_arm_cm4f.cmake  toolchain_keil6_arm_cm7.cmake  toolchain_riscv.cmake
compat/: arduino_io.h
core/: CMakeLists.txt
core/include/: buffer_pool.h  compiler_compat.h  compiler_compat_poison.h  critical_data.h  event_bus.h  event_bus.hpp  printf_output.h  production_log.h  safe_state.h  system_log.h  system_log.hpp
core/include/bh/: bh.h  bh_bare.h  bh_config.h  bh_os.h
core/src/: buffer_pool.c  event_bus.c  event_bus.cpp  printf_output.c  production_log.c
display_if/: CMakeLists.txt
docs/: debug_monitor.md  driver_guide.md  faq.md  fast_path.md  getting_started.md  keil_integration.md  osal_switching.md  porting_guide.md  problem_summary.md  service_spec.md
drivers/flash/: w25q64_drv.h  w25q64_spi_drv.c
examples/porting_template/: CMakeLists.txt  README.md  hal_cpu.c  hal_flash.c  hal_force_stop.c  hal_init_gd32.c  hal_init_stm32.c  hal_platform_safety.c  hal_pulse_engine_esp32.c  hal_storage.c  hal_wdt.c
examples/rk3288_build/: README.md
examples/rk3288_build/dts/: board.dts  skeleton.dtsi
examples/rk3288_build/dts/dt-bindings/clock/: rk3288-cru.h
examples/rk3288_build/dts/dt-bindings/gpio/: gpio.h
examples/rk3288_build/dts/dt-bindings/interrupt-controller/: arm-gic.h  irq.h
examples/rk3288_build/dts/dt-bindings/pinctrl/: rockchip.h
examples/rk3288_build/dts/dt-bindings/thermal/: thermal.h
hal/: hal_if_dummy.c  paths.cmake
hal/analog/: hal_adc.h  hal_dac.h
hal/cpu/: hal_cpu.h  hal_cpu_amp.c  hal_cpu_delay.h
hal/gpio/: hal_gpio.h
hal/pwm/: hal_pwm.c  hal_pwm.h
hal/spi/: hal_spi.h
hal/storage/: hal_flash.h  hal_storage.h
hal/system/: hal_dma.h  hal_platform_safety.h  hal_rtc.h  hal_sdio.h  hal_timer.h  hal_wdt.h
hal/uart/: hal_uart.h
hal_if/: CMakeLists.txt
hal_if/include/: hal_adc.h  hal_can.h  hal_cpu.h  hal_cpu_delay.h  hal_cpu_fast.h  hal_dac.h  hal_dma.h  hal_flash.h  hal_gpio.h  hal_gpio_fast.h  hal_i2c.h  hal_i2s_bus.h  hal_platform_safety.h  hal_pulse_engine.h  hal_pwm.h  hal_pwm_fast.h  hal_rtc.h  hal_sdio.h  hal_spi_bus.h  hal_storage.h  hal_timer.h  hal_uart.h  hal_usb.h  hal_wdt.h
hal_if/src/: hal_cpu_amp.c  hal_if_dummy.c
lib/: CMakeLists.txt
lib/freeRTOS/: CMakeLists.txt  FreeRTOSConfig.h
lib/freeRTOS/portable/GCC/RISC-V/: freertos_risc_v_chip_specific_extensions.h
lib/rtthread/: CMakeLists.txt  rtconfig.h
lib/rtthread/libcpu/arm/cortex-m4/: cpuport.c
lib/rtthread/libcpu/arm/cortex-m7/: context_gcc.S
lib/rtthread/libcpu/x86/: atomic.c
osal/: CMakeLists.txt
osal/include/: osal.h  osal_null.h  osal_tick.h
osal/src/: osal_freertos.c  osal_null.c  osal_rtthread.c
system_c/: CMakeLists.txt
system_c/include/: system_cfg.h  system_init.h  system_scrubber.h  system_scrubber_config.h  system_wdt.h  task_manager.h
system_c/src/: system_init.c  system_scrubber.c  system_wdt.c  task_manager.c
system_cpp/: CMakeLists.txt  compile_flags.txt
system_cpp/include/: lifecycle.hpp  safe_state.h  system_cmd.hpp  system_init.hpp  system_runtime.hpp  system_scrubber.hpp  system_wdt.hpp  task_manager.hpp
system_cpp/src/: lifecycle.cpp  safe_state.c  system_cmd.cpp  system_init.cpp  system_runtime.cpp  system_scrubber.cpp  system_wdt.cpp  task_manager.cpp
tools/: README.md  dtc-lite.py  gen_uvprojx.py  genconfig.py  kconfig_gui.py  menuconfig.py  p2s.py  post_build_crc.py  sync_from_esp_baseline.py  system_scrubber_crc_gen.h  system_scrubber_crc_stub.h
tools/dtc_lite/: __init__.py  compiler.py  dts_ast.py  generator.py  lexer.py  main.py  parser.py  platform.py
tools/tools/: README.md  menuconfig.py  post_build_crc.py  system_scrubber_crc_stub.h
tools/tools/dtc_lite/: __init__.py  compiler.py  grammar.py  main.py  parser.py
vfs/gpio/: vfs-gpio.c  vfs-gpio.h
vfs/spi/: spi_vfs.c  spi_vfs.h
vfs/uart/: uart_vfs.c  uart_vfs.h
