# ==============================================================================
# algorithm — 算法组件结点
# ==============================================================================
# 缓冲区、DSP 算法等独立计算模块。无内部项目依赖。
# ==============================================================================

add_library(algorithm STATIC
    "buffer/circle_fifo_buffer.c"
)

target_include_directories(algorithm
    PUBLIC
        "buffer"
)
